--- a/src/css/herosection.css
+++ b/src/css/herosection.css
@@ -9,7 +9,7 @@
 }
 
 .herosection__heading {
-  height: 50vh;
+  height: 60vh;
   color: #e0e0e0;
   background-color: rgba(0, 0, 0, 0.726);
 }
@@ -92,8 +92,8 @@
 }
 .herosection__images .herosection__infos {
   z-index: -1;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 40% 60%;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -101,11 +101,11 @@
   height: 90px;
   background-color: rgba(0, 0, 0, 0.733);
 }
-.herosection__images .herosection__infos .herosection__infos {
+.herosection__images .herosection__infos .herosection__info-img-cont {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
 .herosection__images .herosection__infos h2 {
   color: white;
@@ -115,7 +115,6 @@
   font-weight: bold;
 }
 .herosection__images .herosection__infos img {
-  margin-right: 1rem;
   filter: invert(100%);
   width: 50px;
 }
